--- a/app/views/inventory/item-grid.html
+++ b/app/views/inventory/item-grid.html
@@ -28,10 +28,7 @@
         </div>
         <div class="cjp-action-button-wrap">
           <div class="cjp-action">
-            <a class="cjp-action-button cjp-action-eprice" ui-sref="inventory_detail({detail_url: item.detail_url, item_id: item.record_id})">
-              <span class="glyphicon glyphicon-tag"></span>
-              Get E-Price
-            </a>
+            <eprice item-id="item.record_id"></eprice>
           </div>
         </div>
       </div>
