--- a/app/styles/list.css
+++ b/app/styles/list.css
@@ -35,8 +35,7 @@ h1.cjp-header{
 	border: 1px solid #e7e7e7;
 	margin: 10px 0;
 	border-radius: 4px;
-	min-height: 50px;
-	height: 52px;
+	min-height: 52px;
 }
 
 .cjp-filter-actions{
@@ -82,6 +81,12 @@ h1.cjp-header{
 	margin-left: 15px;
 }
 
+#cjp-pagination{
+	width: 100%;
+}
+#cjp-pagination .pagination{
+	width: auto;
+}
 
 
 
