--- a/app/views/inventory/detail.html
+++ b/app/views/inventory/detail.html
@@ -1,6 +1,6 @@
 
 <!-- recontruct -->
-<section id="cjp-main-sec" class="row" >
+<section id="cjp-main-sec" class="row">
 	<div class="col-xs-12">
 		<div class="row">
 			<div class="col-xs-12">
@@ -41,7 +41,7 @@
 					</div>
 					
 					<div class="row">
-						<div class="col-xs-6">
+						<div class="col-xs-12">
 							<div id="cjp-instock-container">
 								<div id="cjp-current-stock">
 									Only {{ inventoryDetail.leftInStock }} {{ inventoryDetail.item.model }} left in stock!
@@ -50,12 +50,15 @@
 
 
 							<div id="cjp-action-box">
-								<a href="" class="btn btn-success">Get E-Price</a>
+								<div class="btn btn-success">
+								<eprice item-id="inventoryDetail.item.record_id"></eprice>
+								</div>
 								<span id="cjp-action-caption">
 									*Pricing information for {{ inventoryDetail.today | date : 'mediumDate' }}
 								</span>
 							</div>
 						</div>
+						<!--
 						<div class="col-xs-6">
 							<div id="cjp-view-count-container">
 								<span class="glyphicon glyphicon-user"></span>
@@ -63,6 +66,7 @@
 								<span id="cjp-view-count-label">people recently viewed this vehicle*</span>
 							</div>
 						</div>
+					-->
 					</div>
 				</div>
 
@@ -88,13 +92,13 @@
 <!-- end econtruct -->
 
 
-<section class="row" style="background: #fff; padding-top: 25px; padding-bottom: 25px;">
+<section id="cjp-tools-sec" class="row">
 	<div class="col-xs-6">
-		<div class="row">
+		<!--<div class="row">
 			<a href class="col-xs-12">
 				View larger gallery
 			</a>
-		</div>
+		</div>-->
 		<div class="row">
 			<owl-carousel id="cjp-thumb-carousel" class="owl-carousel owl-theme" data-options="{margin:10, items:4, nav:true, loop:false, updateSize: true}">
 				<div owl-carousel-item ng-repeat="photo in inventoryDetail.previewGallery track by $index">
@@ -104,10 +108,10 @@
 		</div>
 	</div>
 	<div class="col-xs-6">
-		<div class="row">
+		<div class="row" ng-if="inventoryDetail.item.video_id">
 			<h3 class="col-xs-12">Shopping Tools:</h3>
 		</div>
-		<div class="row">
+		<div class="row" ng-if="inventoryDetail.item.video_id">
 			<div class="col-xs-12">
 				<a href="" class="btn cjp-tool-btn">
 					<span class="cjp-tool-icon glyphicon glyphicon-play"></span>
@@ -155,17 +159,9 @@
 </section>
 
 <style>
-	ul.feature-list {
-	    -moz-column-count: 4;
-	    -moz-column-gap: 20px;
-	    -webkit-column-count: 4;
-	    -webkit-column-gap: 20px;
-	    column-count: 4;
-	    column-gap: 20px;
-	    list-style: none;
-	}
+	
 </style>
-<section class="row" style="background: #ccc; padding-top: 25px; padding-bottom: 25px;">
+<section id="cjp-tab-sec" class="row">
 	<div class="col-xs-12">
 		<uib-tabset active="active">
 			<uib-tab index="0" heading="Details">
@@ -179,7 +175,7 @@
 </section>
 
 
-<section class="row" style="background: #fff; padding-top: 25px; padding-bottom: 25px;">
+<section class="row" style="padding-top: 25px; padding-bottom: 25px;" ng-if="inventoryDetail.similarItems.length > 0">
 	<div class="col-xs-12">
 		<div class="row">
 			<h3 class="col-xs-12">
@@ -190,21 +186,25 @@
 			<div class="col-xs-12">
 				<owl-carousel class="owl-carousel owl-theme" data-options="{margin:10, items:4, nav:true, loop:false}">
 					<div owl-carousel-item ng-repeat="item in inventoryDetail.similarItems track by $index">
-						<img imageonload="initSize" ng-src="{{ item.primary_photo }}"  />
+						<a ui-sref="inventory_detail({detail_url: item.detail_url, item_id: item.record_id})">
+							<img imageonload="initSize" ng-src="{{ item.primary_photo }}"  />
+						</a>
 					</div>
 	    		</owl-carousel>
 			</div>
 		</div>
-		<div class="row">
+		<!--<div class="row">
 			<span class="col-xs-12">
 				Disclaimer
 			</span>
 			<span class="col-xs-12">
 				Disclaimer here
 			</span>
-		</div>
+		</div>-->
 	</div>
 </section>
+
+<jsonld data-json="inventoryDetail.jsonld"></jsonld>
 
 
 
