--- a/app/views/inventory/detail.html
+++ b/app/views/inventory/detail.html
@@ -108,7 +108,7 @@
 		</div>
 	</div>
 	<div class="col-xs-6">
-		<div class="row" ng-if="inventoryDetail.item.video_id">
+		<!--<div class="row" ng-if="inventoryDetail.item.video_id">
 			<h3 class="col-xs-12">Shopping Tools:</h3>
 		</div>
 		<div class="row" ng-if="inventoryDetail.item.video_id">
@@ -118,7 +118,7 @@
 					<span class="cjp-tool-label">VIDEO</span>
 				</a>
 			</div>
-		</div>
+		</div>-->
 		<div class="row">
 			<h3 class="col-xs-12">Vehicle Details:</h3>
 		</div>
