--- a/app/views/inventory/e-price.html
+++ b/app/views/inventory/e-price.html
@@ -31,6 +31,6 @@
 </div>
 <div class="modal-footer">
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
-    <button class="btn btn-success" type="button" ng-click="buy()">Buy Now</button>
+    <button class="btn btn-success" type="button" ng-click="buy()">Send</button>
 </div>
 
